addons/ingress/traefik/jaeger-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: observability
spec:
  basicAuth:
    secret: observability-jaeger
