addons/ingress/traefik/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-api
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              number: 443

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
