addons/ingress/traefik/k8dash-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-k8dash
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /kubernetes-dashboard
        backend:
          serviceName: kubernetes-k8dash
          servicePort: 80
