addons/ingress/traefik/skooner-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-skooner
  namespace: kubernetes-skooner
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-skooner-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: example.com
    http:
      paths:
      - path: /kubernetes-dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-skooner
            port:
              number: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: kubernetes-skooner
spec:
  stripPrefix:
    prefixes:
      - /kubernetes-dashboard
